$Id$

2011-01-31 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-dlpi.c: Fix "comparison between signed and unsigned" warning in
	  function dlpi_msg.

	* arp-fingerprint: Added fingerprint for Windows 7.

	* arp-scan.c: Changed what gets displayed for the different verbose
	  levels, and updated the --help output to reflect the new behaviour.

2011-01-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-packet, check-decode: New checks to check packet creation and
	  packet decoding.

	* pkt-custom-request.dat, pkt-custom-request-llc.dat,
	  pkt-custom-request-padding.dat, pkt-custom-request-vlan.dat,
	  pkt-padding-response.dat, pkt-simple-request.dat,
	  pkt-simple-response.dat: Data files for check-packet and check-decode
	  scripts.

	* Makefile.am: Add new check scripts and data files.

	* arp-scan.c, arp-scan.h: Added undocumented options --writepkttofile
	  and --readpktfromfile to allow data to be written to or read from a
	  file instead of the network for testing.

	* arp-scan.c: Use "stdin" instead of fdopen(0,"r") when using
	  --filename=-, fixing a bug which was causing fd 0 to be closed.
	  Set the frame type correctly for LLC/SNAP format frames: before
	  it was always set to 0x0806.

	* configure.ac: Add headers required for --writepkttofile and
	  --readpktfromfile.  Increment version number to 1.7.5.

2011-01-09 Roy Hills <Roy.Hills@nta-monitor.com>

	* COPYING: Changed license from GPLv2 to GPLv3.

	* Modified licence statement in source files to specify GPLv3

	* Modified copyright statement in files to include up to 2011.

2010-12-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Change req_interval back from unsigned to int. This
	  addresses a bug in the timing code that was introduced in svn
	  r18043, which caused the packet rate to be very high irrespective
	  of the specified interval.

	* configure.ac: Enable -Wextra warnings for gcc. Increment version
	  number to 1.7.4.

2010-12-22 Roy Hills <Roy.Hills@nta-monitor.com>
